vpc/vpc_peering.yaml
# aws cloudformation deploy --template-file vpc_peering.yaml --stack-name PeeringDemo --capabilities CAPABILITY_IAM --parameter-overrides InstanceType=t2.micro AccepterVpcId=$(aws ec2 describe-vpcs --filters "Name=isDefault,Values=true" --query "Vpcs[0].VpcId" --output text) AccepterCidrBlock=$(aws ec2 describe-vpcs --filters "Name=isDefault,Values=true"  --query "Vpcs[0].CidrBlock" --output text) AccepterRouteTableId=$(aws ec2 describe-route-tables --filters "Name=vpc-id,Values=$(aws ec2 descri [...]
# aws cloudformation delete-stack --stack-name vpc_peering
AWSTemplateFormatVersion: '2010-09-09'

Description: 'Demo VPC peering'

Parameters:
  AccepterVpcId:

    Type: String
  AccepterCidrBlock:

    Type: String
  AccepterRouteTableId:
    Type: String

  InstanceType:
    Description: WebServer EC2 instance type
    Type: String
    Default: t3.small

  SSHLocation:
    Description: The IP address range that can be used to SSH to the EC2 instances
    Type: String
    MinLength: 9
    MaxLength: 18
    Default: 0.0.0.0/0
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.

  LatestAmiId:
    Type:  'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-default-x86_64'

Resources:
  EC2Role:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
        - Effect: Allow
          Principal:
            Service: [ec2.amazonaws.com]
          Action: ['sts:AssumeRole']
      Path: /
      ManagedPolicyArns: ['arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore']

  launchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateName: !Sub "${AWS::StackName}-launchTemplate"
      LaunchTemplateData:
        ImageId: !Ref 'LatestAmiId'
        MetadataOptions:
          HttpTokens: required

  EC2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles: [!Ref 'EC2Role']

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      LaunchTemplate:
        LaunchTemplateId: !Ref launchTemplate
        Version: !GetAtt launchTemplate.LatestVersionNumber
      IamInstanceProfile: !Ref EC2InstanceProfile
      InstanceType: !Ref 'InstanceType'
      SecurityGroupIds:
        - !GetAtt InstanceSecurityGroup.GroupId
      KeyName:
        Fn::ImportValue: 'private-ecs:SshKeyName'
      SubnetId: {"Fn::ImportValue": !Sub "vpc:PublicSubnetOne"}
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          # Use this for your user data (script from top to bottom)
          # install httpd (Linux 2 version)
          yum update -y
          yum install -y httpd
          systemctl start httpd
          systemctl enable httpd
          az=$(TOKEN=`curl -X PUT "http://169.254.169.254/latest/api/token" -H "X-aws-ec2-metadata-token-ttl-seconds: 21600"` && curl -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/placement/availability-zone)
          echo "<h1>Hello Panda from $(hostname -f) and $az</h1>" > /var/www/html/index.html
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-custom-vpc

  EC2InstanceDefaultVPC:
    Type: AWS::EC2::Instance
    Properties:
      LaunchTemplate:
        LaunchTemplateId: !Ref launchTemplate
        Version: !GetAtt launchTemplate.LatestVersionNumber
      IamInstanceProfile: !Ref EC2InstanceProfile
      InstanceType: !Ref 'InstanceType'
      SecurityGroupIds:
        - !GetAtt DefaultVPCInstanceSecurityGroup.GroupId
      KeyName:
        Fn::ImportValue: 'private-ecs:SshKeyName'
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          # Use this for your user data (script from top to bottom)
          # install httpd (Linux 2 version)
          yum update -y
          yum install -y httpd
          systemctl start httpd
          systemctl enable httpd
          az=$(TOKEN=`curl -X PUT "http://169.254.169.254/latest/api/token" -H "X-aws-ec2-metadata-token-ttl-seconds: 21600"` && curl -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/placement/availability-zone)
          echo "<h1>Hello Panda from $(hostname -f) and $az</h1>" > /var/www/html/index.html
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-default-vpc

  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId:
        Fn::ImportValue: "vpc:VPCId"
      GroupDescription: Enable SSH access via port 22
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: !Ref 'SSHLocation'
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0

  DefaultVPCInstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access via port 22
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: !Ref 'SSHLocation'
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0

  # --- VPC Peering Connection ---
  VpcPeeringConnection:
    Type: 'AWS::EC2::VPCPeeringConnection'
    Properties:
      VpcId: {"Fn::ImportValue": !Sub "vpc:VPCId"}
      PeerVpcId: !Ref AccepterVpcId

  # --- Network Routes ---
  # Send traffic bound for Accepter CIDR through the peering connection
  RouteRequesterToAccepter:
    Type: 'AWS::EC2::Route'
    DependsOn: VpcPeeringConnection
    Properties:
      RouteTableId: {"Fn::ImportValue": !Sub "vpc:PublicRouteTable"}
      DestinationCidrBlock: !Ref AccepterCidrBlock
      VpcPeeringConnectionId: !Ref VpcPeeringConnection

  # Send traffic bound for Requester CIDR through the peering connection
  RouteAccepterToRequester:
    Type: 'AWS::EC2::Route'
    DependsOn: VpcPeeringConnection
    Properties:
      RouteTableId: !Ref AccepterRouteTableId
      DestinationCidrBlock: {"Fn::ImportValue": !Sub "vpc:VPCCidrBlock"}
      VpcPeeringConnectionId: !Ref VpcPeeringConnection
